database properties configurations

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,1 +1,7 @@
-spring.application.name=booking
+# Database
+server.port=8081
+spring.application.name=triptekker
+spring.jpa.hibernate.ddl-auto=update
+spring.datasource.url=jdbc:postgresql://localhost:5434/triptekker
+spring.datasource.username=postgres
+spring.datasource.password=postgres
