adding springdoc dependancy for swagger documentation plus appication.properties to wnable it and solving @Controller because doesnot appears apis by replacing @Controller to @RestController

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -6,3 +6,7 @@ spring.datasource.url=jdbc:postgresql://localhost:5434/triptekker
 spring.datasource.username=postgres
 spring.datasource.password=postgres
 
+# swagger configuration
+springdoc.swagger-ui.enabled=true
+springdoc.api-docs.enabled=true
+springdoc.swagger-ui.path=/swagger-ui.html
