modifing application.properties more structured

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,10 +1,16 @@
-# Database
+# server configuration
 server.port=8081
 spring.application.name=triptekker
-spring.jpa.hibernate.ddl-auto=update
+
+
+# Database configuration
 spring.datasource.url=jdbc:postgresql://localhost:5434/triptekker
 spring.datasource.username=postgres
 spring.datasource.password=postgres
+
+spring.jpa.show.sql=true
+spring.jpa.hibernate.ddl-auto=update
+
 
 # swagger configuration
 springdoc.swagger-ui.enabled=true
