--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -8,7 +8,7 @@ spring.datasource.url=jdbc:postgresql://localhost:5434/triptekker
 spring.datasource.username=postgres
 spring.datasource.password=postgres
 
-spring.jpa.show.sql=true
+#spring.jpa.show.sql=true
 spring.jpa.hibernate.ddl-auto=update
 
 
